@@ -4,6 +4,8 @@ const fs = require('node:fs')
 const { promises: fsp } = fs
 const ospath = require('node:path')
 
+const ExtractRepositoryPathRx = /^(?:\w+@.+?:|\w+:\/\/.+?\/)(.+?)(?:\.git)?$/
+
 module.exports.register = function ({ config = {} }) {
   const refname = config.refname || process.env.BUILD_REFNAME
   if (!refname) return
@@ -18,11 +20,9 @@ module.exports.register = function ({ config = {} }) {
     const isBranch = refname === 'main' || refname.endsWith('.x')
     let version = config.version || process.env.BUILD_VERSION
     if (!version) {
-      const repoUrl = await this.require('isomorphic-git')
-        .listRemotes({ fs, dir: playbook.dir })
-        .then((remotes) => remotes.find(({ remote }) => remote === 'origin').url)
       const { rawgitUrl = 'https://raw.githubusercontent.com' } = config
-      const propertiesUrl = `${rawgitUrl}${new URL(repoUrl).pathname}/${refname}/gradle.properties`
+      const repositoryPath = await getRepositoryPath(this.require('isomorphic-git'), playbook.dir)
+      const propertiesUrl = `${rawgitUrl}/${repositoryPath}/${refname}/gradle.properties`
       version = await download(get, propertiesUrl).then((contents) => extractVersion(contents, refname))
     }
     if (isBranch && version.endsWith('-SNAPSHOT')) version = version.slice(0, -9)
@@ -57,4 +57,26 @@ function extractVersion (contents, fallback) {
   for (const line of (contents.toString().trimEnd() + `\nversion=${fallback}`).split('\n')) {
     if (line.startsWith('version=')) return line.slice(8)
   }
+}
+
+function getRepositoryPath (git, dir) {
+  return resolveGitdir(git, dir).then((gitdir) =>
+    git
+      .listRemotes({ fs, gitdir })
+      .then((remotes) => ExtractRepositoryPathRx.exec(remotes.find(({ remote }) => remote === 'origin').url)[1])
+  )
+}
+
+function resolveGitdir (git, dir, dotgit = ospath.join(dir, '.git')) {
+  return fsp.stat(dotgit).then((stat) => {
+    if (stat.isDirectory()) return dotgit
+    return fsp
+      .readFile(dotgit, 'utf8')
+      .then((contents) => contents.substr(8).trimRight())
+      .then((worktreeGitdir) =>
+        fsp
+          .readFile(ospath.join(worktreeGitdir, 'commondir'), 'utf-8')
+          .then((commondir) => ospath.join(worktreeGitdir, commondir.trimRight()))
+      )
+  })
 }
