@@ -4,6 +4,12 @@
 This document provides a summary of all notable changes to this project by release.
 For a detailed view of what's changed, refer to the {url-repo}/commits[commit history] of this project.
 
+== Unreleased
+
+=== Fixed
+
+* *partial-build-extension*: Resolve repository origin URL when playbook dir is linked worktree
+
 == 1.0.0-alpha.1 (2022-12-14)
 
 _Initial prerelease._
